feat(web): add general env and commit before main

--- a/images/web/src/assets/css/App.css
+++ b/images/web/src/assets/css/App.css
@@ -76,7 +76,9 @@ button {
   position:  absolute;
 }
 .clippingItem {
-  position:  absolute;
+  position:  absolute; 
+  -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
+  filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
 }
 
 #header {
