--- a/images/web/src/assets/css/App.css
+++ b/images/web/src/assets/css/App.css
@@ -1,14 +1,33 @@
 
 body {
   background-color:  #eee;
+  overflow-x: hidden;
 }
 
 
 #container {
-  /*width: 600px;*/
+  height:  800px;
   margin:  auto;
+  margin-top:  calc(50vh - 400px);
   display:  flex;
   flex-wrap: wrap;
+}
+#canvasContainer {
+  width:  1200px;
+  height:  800px;
+  margin:  auto;
+  margin-top:  calc(50vh - 400px);
+  display:  flex;
+  flex-wrap: wrap;
+  border:  1px solid #000;
+}
+#pickerContainer {
+  width:  1200px;
+  margin:  auto;
+  margin-top:  calc(50vh - 400px);
+  display:  flex;
+  flex-wrap: wrap;
+  border:  1px solid #000;
 }
 .item {
   max-width:  200px;
@@ -77,7 +96,7 @@ button {
 }
 .clippingItem {
   position:  absolute; 
-  -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
+/*  -webkit-filter: grayscale(1);  Google Chrome, Safari 6+ & Opera 15+ 
   filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
 }
 
