initial commit -no canvas

--- a/images/explorer/src/style/style.css
+++ b/images/explorer/src/style/style.css
@@ -1,7 +1,11 @@
 body {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 .clipping {
+  position:  absolute;
+}
+
+#container {
   position:  absolute;
 }
 
