--- a/images/mechanical/src/static/styles/style.css
+++ b/images/mechanical/src/static/styles/style.css
@@ -6,28 +6,33 @@ body {
   overflow: hidden;
   color: #fff;
 }
+
 #leftLane {
   width: 50vw;
   height: 100vh;
   float: left;
 }
+
 #rightLane {
   width: 50vw;
   height: 100vh;
   float: left;
 }
+
 #visualContainer {
-  width:  100%;
-  height:  90%;
+  width: 100%;
+  height: 90%;
   padding: 20px 50px;
   box-sizing: border-box;
 }
+
 #approveContainer {
-  width:  100%;
-  height:  90%;
+  width: 100%;
+  height: 90%;
   padding: 20px 50px;
   box-sizing: border-box;
 }
+
 #workerInfo {
   width: 100%;
   height: 10%;
@@ -35,74 +40,83 @@ body {
   box-sizing: border-box;
 
 }
+
 #logoContainer {
   width: 100%;
   height: 10%;
   padding: 20px 0px 20px 20px;
   box-sizing: border-box;
 }
-#workerInfo > h1 {
+
+#workerInfo>h1 {
   font-size: 1em;
   line-height: 1.5em;
 }
-#logoContainer > img {
+
+#logoContainer>img {
   height: 100%;
   margin-right: 20px;
 }
+
 .itemFromCollection {
   max-width: 500px;
-  float:  left;
+  float: left;
   display: block;
   margin: auto;
   box-sizing: border-box;
 }
 
 .imageHolder {
-  width:  100%;
-  height:  400px;
+  width: 100%;
+  height: 400px;
   padding: 20px;
   box-sizing: border-box;
   display: flex;
   justify-content: center;
-  float:  left;
+  float: left;
   margin-bottom: 20px;
 }
-.imageHolder > img {
-  height:  500px;
+
+.imageHolder>img {
+  height: 500px;
   max-width: 100%;
   margin-bottom: 50px;
-  display:  block;
+  display: block;
 }
+
 .expl {
   font-size: .9em;
   font-style: italic;
   color: #aaa;
   margin-top: 50px;
 }
-.itemFromCollection > h1 {
+
+.itemFromCollection>h1 {
   font-size: 1.5em;
   line-height: 1.1em;
-  width:  100%;
+  width: 100%;
   min-height: 90px;
-  display:  block;
-  float:  left;
-  margin-top:  10px;
+  display: block;
+  float: left;
+  margin-top: 10px;
   color: #000;
 }
 
-.itemFromCollection > p {
+.itemFromCollection>p {
   font-size: 1em;
-  width:  100%;
-  display:  block;
-  float:  left;
+  width: 100%;
+  display: block;
+  float: left;
   padding: 20px;
   box-sizing: border-box;
-  margin-top:  10px;
+  margin-top: 10px;
 }
+
 .row {
-  width:  100%;
+  width: 100%;
   float: left;
 }
+
 .hitem {
   font-size: .8em;
   color: #666;
@@ -111,19 +125,54 @@ body {
   line-height: 10px;
   display: block;
 }
+
 .originHolder {
   text-align: right;
 }
+
 .collectionHolder {
   text-align: left;
 }
+
 .colors {
   display: flex;
   justify-content: center;
 }
-.colors > .color {
-  width:  10px;
-  height:  10px;
-  float:  left;
-  margin:  0px 5px 0px 0px;
+
+.colors>.color {
+  width: 10px;
+  height: 10px;
+  float: left;
+  margin: 0px 5px 0px 0px;
+}
+
+/* Vis css */
+#canvas {
+  margin: 0;
+  padding: 0;
+}
+
+.box {
+  float: left;
+  height: 10px;
+  width: 10px;
+  border: 1px solid black;
+  margin-left: 24px;
+  clear: both;
+}
+
+.red {
+  background-color: red;
+}
+
+.green {
+  background-color: green;
+}
+
+tr {
+  text-align: center;
+}
+
+td {
+  padding: 6px;
 }
