--- a/images/mechanical/src/static/styles/style.css
+++ b/images/mechanical/src/static/styles/style.css
@@ -1,21 +1,25 @@
 body {
-  font-size: 12pt;
+  font-size: 16pt;
   font-family: monospace;
   line-height: 1.6em;
   background-color: #000;
   overflow: hidden;
   color: #fff;
+  padding-top: 80px;
+  float: left;
 }
-
+#container {
+  float: left;
+}
 #leftLane {
-  width: 50vw;
-  height: 100vh;
+  width: 50%;
+  height: calc(100vh - 80px);
   float: left;
 }
 
 #rightLane {
-  width: 50vw;
-  height: 100vh;
+  width: 50%;
+  height: calc(100vh - 80px);
   float: left;
 }
 
@@ -27,9 +31,10 @@ body {
 }
 
 #approveContainer {
-  width: 100%;
-  height: 90%;
-  padding: 20px 50px;
+  width:  100%;
+  height:  90%;
+  float: left;
+  padding: 25px 50px;
   box-sizing: border-box;
 }
 
@@ -43,7 +48,8 @@ body {
 
 #logoContainer {
   width: 100%;
-  height: 10%;
+  height: 100px;
+  float: left;
   padding: 20px 0px 20px 20px;
   box-sizing: border-box;
 }
@@ -53,13 +59,13 @@ body {
   line-height: 1.5em;
 }
 
-#logoContainer>img {
+#logoContainer > img {
   height: 100%;
   margin-right: 20px;
 }
 
 .itemFromCollection {
-  max-width: 500px;
+  max-width: 800px;
   float: left;
   display: block;
   margin: auto;
@@ -68,7 +74,7 @@ body {
 
 .imageHolder {
   width: 100%;
-  height: 400px;
+  height: 600px;
   padding: 20px;
   box-sizing: border-box;
   display: flex;
@@ -78,7 +84,7 @@ body {
 }
 
 .imageHolder>img {
-  height: 500px;
+  height: 660px;
   max-width: 100%;
   margin-bottom: 50px;
   display: block;
@@ -118,7 +124,7 @@ body {
 }
 
 .hitem {
-  font-size: .8em;
+  font-size: 1em;
   color: #666;
   width: 33%;
   float: left;
@@ -139,19 +145,15 @@ body {
   justify-content: center;
 }
 
-.colors>.color {
-  width: 10px;
-  height: 10px;
-  float: left;
-  margin: 0px 5px 0px 0px;
-}
-
 /* Vis css */
 #canvas {
   margin: 0;
   padding: 0;
 }
-
+h2 {
+  margin-top: -10px;
+  margin-bottom: 10px;
+}
 .box {
   float: left;
   height: 10px;
@@ -169,10 +171,33 @@ body {
   background-color: green;
 }
 
+table {
+  font-size: .6em;
+}
 tr {
   text-align: center;
 }
 
 td {
   padding: 6px;
+}
+
+.colors>.color {
+  width: 10px;
+  height: 10px;
+  float: left;
+  margin: 0px 5px 0px 0px;
+}
+#helpContainer {
+  position: absolute;
+  display: none;
+  width: 400px;
+  padding: 10px;
+  box-sizing: border-box;
+  font-size: 1em;
+  line-height: 1.2em;
+  color: #000;
+  top: calc(50vh - 200px);
+  left: calc(50vw - 100px);
+  background-color: #fff;
 }
