--- a/images/web/src/assets/css/App.css
+++ b/images/web/src/assets/css/App.css
@@ -1,5 +1,8 @@
 body {
   background: #eee;
+  font-size: 14pt;
+  font-family: sans-serif;
+  overflow-x: hidden;
 }
 
 .container {
@@ -34,23 +37,145 @@ body {
 }
 
 .informationContainer {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(6, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
-
-  padding: 30px;
+  margin-bottom: 50px;
+  background: #fff;
+  width: 100%;
+  padding: 25px;
   box-sizing: border-box;
 }
+.informationContainer > table { 
+  width: 100%;
+}
 
-.annotations { grid-area: 1 / 2 / 3 / 4; }
-.aiAnnotation { grid-area: 1 / 2 / 2 / 4; }
-.originAnnotation { grid-area: 2 / 2 / 3 / 4; }
-.headline { grid-area: 1 / 1 / 7 / 2; }
-.placementInfo { grid-area: 3 / 2 / 7 / 4; }
-.placementX { grid-area: 3 / 2 / 4 / 4; }
-.placementY { grid-area: 4 / 2 / 5 / 4; }
-.placementLoc { grid-area: 5 / 2 / 6 / 4; }
-.placementDate { grid-area: 6 / 2 / 7 / 4; }
+.annotations { 
+  font-size: 12pt;
+  padding: 20px;
+  box-sizing: border-box;
+}
+.aiAnnotation {  
+  color: #aaa; 
+  margin-bottom: 10px }
+.originAnnotation {  }
 
+.headline { 
+  border-right: 1px solid #eee;
+  box-sizing: border-box;
+  width: 80px;
+}
+#headlineWrap {
+  padding: 0px;
+  float: left;
+  box-sizing: border-box;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  padding: 10px;
+  height: 100%;
+}
+.origin {
+  padding: 0px 50px 0px 0px;
+  color: #aaa;
+  grid-area: 4 / 1 / 4 / 1; 
+  display: block;
+  font-size: 12pt;
+  transform-origin: 0 0;
+  transform: rotate(-90deg)  translate(-65px, 0px);
+}
+#itemID { 
+  grid-area: 1 / 1 / 1 / 1;
+  font-size: 3em;
+  transform-origin: 0 0;
+  transform: rotate(-90deg) translate(-80px, 0px);
+}
+.placementInfo {
+  padding: 20px;
+  box-sizing: border-box;
+  font-size: 12pt;
+
+}
+.pItem {
+  display: block;
+  font-size: 12pt;
+  text-align: right;
+  width: 100%;
+  height: 30px;
+}
+.pItem > span {
+  display: inline-block;
+  float: left;
+  color: #aaa;
+}
+
+
+.menu {
+  background: #fff;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  height: 50px;
+  float: left;
+  width: 100vw;
+  box-sizing: border-box;
+  z-index: 30;
+}
+.menu > a {
+  color: #aaa;
+  text-decoration: none;
+  line-height: 20px;
+  margin-left: 10px;
+  margin: 15px;
+  display: inline-block;
+}
+.hamburger {
+  float: right;
+  display: block;
+  width: 50px;
+  padding: 25px 0px;
+  height: 50px;
+}
+
+#menuOverlay {
+  background: #fff;
+  width: 100vw;
+  height: calc(100vh - 50px);
+  top: 50px;
+  padding: 0px 20px;
+  box-sizing: border-box;
+  z-index: 20;
+  position: fixed;
+}
+
+.linkContainer {
+  width: 100%;
+
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+  padding: 20px 0px;
+  box-sizing: border-box;
+  margin-bottom: 50px;
+}
+.linkContainer > a {
+  display: block;
+  padding: 20px 0px;
+  box-sizing: border-box;
+  color: #000;
+  text-decoration: none;
+}
+
+.logoContainer {
+  margin-top: 50px;
+}
+.ctaContainer {
+  text-align: center;
+  padding: 20px;
+  box-sizing: border-box;
+}
+.cta {
+  width: 100%;
+  background: #000;
+  color: #fff;
+  padding: 10px 20px;
+  margin: 10px;
+  box-sizing: border-box;
+  text-decoration: none;
+
+}
