--- a/images/web/src/assets/css/viewer.css
+++ b/images/web/src/assets/css/viewer.css
@@ -6,6 +6,12 @@
   display: flex;
   flex-wrap: wrap;
 }
+#containerList {
+  width: 100vw;
+  max-width: 1200px;
+  margin: auto;
+  margin-top: 80px;
+}
 .clipping {
   background: #fff;
   padding: 10px;
@@ -17,9 +23,65 @@
   height: 50px;
 }
 
+.clippingCard {
+  width: calc(100vw - 20px);
+  height: 400px;
+  border: 1px solid #eee;
+  float: left;
+  padding: 50px;
+  box-sizing: border-box;
+  text-align: center;
+  margin: 10px 10px 0px 10px;
+/*  -webkit-filter: grayscale(1);  
+  filter: grayscale(1);*/
+}
+.imgContainer {
+  width: 100%;
+  height: 180px;
+  overflow: hidden;
+}
+.imgContainer > img {
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+}
+.info {
+  padding: 10px;
+  box-sizing: border-box;
+}
+.info > p {
+  font-size: .8em;
+  height: 15px;
+  line-height: 5px;
+}
 
 .clippingItem {
   position: absolute;
-  /*  -webkit-filter: grayscale(1);  Google Chrome, Safari 6+ & Opera 15+ 
-  filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
+}
+.cta {
+  width: 100%;
+  background: #000;
+  color: #fff;
+  padding: 10px 20px;
+  margin: 10px;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+
+#overlay {
+  position: fixed;
+  top: calc(100vh - 70px);
+  width: auto;
+  height:70px;
+  box-sizing: border-box;
+  left: 0px;
+  text-align: center;
+  padding: 25px 10px;
+/*  background-color: #fff;*/
+}
+
+ @media only screen and ( min-width: 600px) {
+  .clippingCard {
+    width: calc((100vw - 100px) / 5 );
+  }
 }
