--- a/images/touch/src/style/style.css
+++ b/images/touch/src/style/style.css
@@ -46,8 +46,14 @@ body {
   margin-bottom: 10px;
 }
 #infoContainer > h1 {
-  font-size: 2em;
+  font-size: 1.2em;
   margin-bottom: 10px;
+    text-overflow: ellipsis;
+
+  /* Required for text-overflow to do anything */
+  white-space: nowrap;
+  overflow: hidden;
+
 }
 #infoContainer > p {
   font-size: 1em;
